Add twitter link

--- a/src/devlogs/01.md
+++ b/src/devlogs/01.md
@@ -124,4 +124,4 @@ This is the first of weekly devlogs until the game ships and beyond.
 
 I hope you can use this train-wreck as a cautionary tale. Thank you for reading, and see you soon.
 
-You can discuss this article on [Twitter](https://twitter.com/).
+You can discuss this article on [Twitter](https://twitter.com/falconerd_/status/1620469081064501248?s=20&t=ChPyZyzoqejC3-p5c7QFMw).
